package gamevm;

//request
message request_vm_ip  {
	required string game_id = 1;
	required string account = 2;
    required uint32 palyer_ip = 3;
    required string  key = 4;
	optional string sign = 5;    //sign(gameid + account)
}

//response
message response_vm_ip  {
	required uint32 vm_ip = 1;
    required uint32 vm_port = 2;
	required string game_id = 3;
	required string account = 4;
    required string  key = 5;
	optional string sign = 6;    //sign(gameid + account)
}
