syntax="proto2";

package gamevm;

message GameVMAddressRequest {
    required string game_id = 1;
    required string user_id = 2;
    required string salt = 3;
    required string sign = 4;
    required uint32 ip = 5;
}
